like buttons added, need to give them functionality

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
       <input name="name" placeholder="Name" required />
       <label>Your message</label>
       <input name="message" placeholder="message" required />
-      <button>Thank you - now submit your message</button>
+      <button class="submit">Thank you - now submit your message</button>
     </form>
     <div id="messageContainer"></div>
   </body>
